fix: timezone handling for provider availability dates and times - Use UTC noon for DATE fields to avoid day shift - Use UTC TIME type instead of VARCHAR for start_time/end_time - Add date utilities (parseLocalDate, parseTime, formatDate, formatTime) - Update database schema SQL

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ NODE_ENV=development
 PORT=4000
 APP_NAME="Beauty Platform API"
 APP_URL=http://localhost:4000
+TZ=Africa/Douala  # Timezone (ex: Africa/Douala, Europe/Paris, UTC)
 
 # -----------------
 # Database (MySQL)
