feat: inscription client + taux completion profil provider + fix activation compte
- Ajout RegisterClientDto et endpoint POST /clients/register
- Ajout ClientsAuthController pour l'inscription client
- Ajout ProfileCompletionService avec GET /providers/profile/completion
- Fix: verifyCode active maintenant isActive=true
- Ajout SKIP_PHONE_VERIFICATION pour mode dev (bypass SMS)
- Mise a jour documentation CLIENT.md et PROVIDER.md

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ SMS_API_KEY=your-sms-api-key
 SMS_API_URL=https://api.sms-provider.cm/v1
 SMS_SENDER_NAME=BeautyApp
 SMS_MOCK_MODE=true  # true = retourne code en dev, false = envoie SMS réel
+SKIP_PHONE_VERIFICATION=true  # true = active les comptes sans vérification SMS (dev only)
 
 # -----------------
 # Mobile Money (Orange Money)
